Mejora en contacto y se agrega iconos de github

--- a/landyng-page/index.html
+++ b/landyng-page/index.html
@@ -43,9 +43,24 @@
         </p>
 
         <div class="cta-row">
+          <!-- Botones principales -->
           <a class="btn btn-primary" href="#proyectos">Ver proyectos</a>
-          <a class="btn btn-ghost" href="#contacto">Hablemos</a>
+          <a class="btn btn-ghost" href="#contacto">Contacto</a>
+          <a class="btn btn-ghost" href="CV_Airon_Saez.pdf" target="_blank" rel="noopener">📄 Descargar CV</a>
         </div>
+
+        <!-- Redes sociales debajo -->
+        <div class="social-links">
+          <!-- LinkedIn -->
+          <a href="https://www.linkedin.com/in/aironsaez/" target="_blank" rel="noopener" title="LinkedIn">
+            <i class="devicon-linkedin-plain"></i>
+          </a>
+          <!-- GitHub -->
+          <a href="https://github.com/AironSaez" target="_blank" rel="noopener" title="GitHub">
+            <i class="devicon-github-original"></i>
+          </a>
+        </div>
+
       </div>
 
       <figure class="hero-media">
@@ -120,7 +135,6 @@
             <ul class="pill-list">
               <li><i class="devicon-git-plain colored" style="font-size:40px"></i> Git</li>
               <li><i class="devicon-github-original" style="font-size:40px"></i> GitHub</li>
-              
             </ul>
           </div>
         </div>
@@ -250,17 +264,33 @@
           <h2>Contacto</h2>
         </header>
         <div class="sec-body">
-          <p>¿Construimos algo juntos? Escríbeme:</p>
-          <p class="contact-links">
-            <a class="btn btn-primary" href="mailto:tuemail@correo.com" id="correo">tuemail@correo.com</a>
-            <button class="btn btn-ghost" type="button" data-copy="#correo" aria-label="Copiar correo">Copiar</button>
-            <span class="sep">•</span>
-            <a class="link" href="CV_Airon_Saez.pdf" target="_blank" rel="noopener">Descargar CV</a>
-            <span class="sep">•</span>
-            <a class="link" href="https://www.linkedin.com/in/tuusuario" target="_blank" rel="noopener">LinkedIn</a>
-            <span class="sep">•</span>
-            <a class="link" href="https://github.com/tuusuario" target="_blank" rel="noopener">GitHub</a>
-          </p>
+          <div class="contact-main">
+            <p class="contact-lead">¿Construimos algo juntos? <br> Escríbeme directamente:</p>
+            <div class="contact-mailbox">
+              <a class="contact-mail btn btn-primary" href="mailto:tuemail@correo.com" id="correo">
+                <i class="devicon-google-plain" style="font-size:28px;vertical-align:middle;margin-right:8px"></i>
+                tuemail@correo.com
+              </a>
+              <button class="btn btn-ghost" type="button" data-copy="#correo" aria-label="Copiar correo">Copiar</button>
+            </div>
+            <div class="contact-actions">
+              <a class="btn btn-ghost" href="CV_Airon_Saez.pdf" target="_blank" rel="noopener">
+                <i class="devicon-google-plain" style="font-size:22px;vertical-align:middle;margin-right:6px"></i>
+                Descargar CV
+              </a>
+            </div>
+          </div>
+          <div class="contact-social">
+            <p class="contact-lead" style="margin-bottom:10px;">Redes profesionales</p>
+            <div class="social-links">
+              <a href="https://www.linkedin.com/in/tuusuario" target="_blank" rel="noopener" title="LinkedIn">
+                <i class="devicon-linkedin-plain"></i>
+              </a>
+              <a href="https://github.com/tuusuario" target="_blank" rel="noopener" title="GitHub">
+                <i class="devicon-github-original"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
