se mejoran los botones "sobre mi"

--- a/landyng-page/index.html
+++ b/landyng-page/index.html
@@ -39,18 +39,11 @@
 
         <div class="cta-row">
           <a class="btn btn-primary" href="#proyectos">Ver proyectos</a>
-          <a class="btn btn-ghost" href="#">descargar CV
-            <img src="images/cv.png" alt="icono CV">
-          </a>
-          <a class="btn btn-ghost" href="#">GitHub
-            <img src="images/github.png" alt="Github icon">
-          </a>
-          <a class="btn btn-ghost" href="#">linkedin
-            <img src="images/linkedin.png" alt="Icono Linekdin">
-          </a>
-
-          
+          <a class="btn btn-ghost" href="#">descargar CV <img src="images/cv.png" alt="icono CV"></a>
+          <a class="btn btn-ghost" href="#">GitHub <img src="images/github.png" alt="Github icon"></a>
+          <a class="btn btn-ghost" href="#">linkedin <img src="images/linkedin.png" alt="Icono Linekdin"></a>
         </div>
+        
       </div>
 
       <figure class="hero-media">
