--- a/landyng-page/index.html
+++ b/landyng-page/index.html
@@ -61,11 +61,10 @@
         <div class="sec-body">
           <div class="timeline">
             <article class="job">
-              <h3>Analista de Acreditación y Gestión de Personal</h3>
-              <p class="job-meta">Empresa XYZ — 2022 - Presente</p>
+              <h3>Desarrollador HUB de juegos de mesa</h3>
+              <p class="job-meta">Nomed — 2025 - Presente</p>
               <p class="job-desc">
-                Gestión de procesos administrativos de acreditación y control de personal. 
-                Implementación de reportes automatizados en Excel y SQL para seguimiento de indicadores.
+                Desarrollador de juegos de mesa interactivos, entre los que se incluyen Tic Tac Toe y Battleship, utilizando WebSockets con Socket.io.
               </p>
             </article>
             <article class="job">
@@ -81,18 +80,55 @@
       </div>
     </section>
 
-        <!--Habilidades-->
+      <!--Habilidades-->
     <section id="skills" class="section">
-      <div class="wrap grid-2">
+      <div class="wrap">
         <header class="sec-head">
           <h2>Habilidades</h2>
         </header>
-        <div class="sec-body">
-          <ul class="pill-list">
-            <li>HTML</li><li>CSS</li><li>JavaScript</li><li>React</li>
-            <li>Node.js</li><li>Socket.io</li><li>Python</li><li>Flask</li>
-            <li>Bootstrap</li><li>SQL básico</li>
-          </ul>
+        <div class="skills-grid">
+          <!-- Lenguajes -->
+          <section class="skill-block">
+            <header class="sec-head">
+              <h3 class="skill-title">Lenguajes</h3>
+            </header>
+            <ul class="pill-list">
+              <li>JavaScript</li>
+              <li>TypeScript</li>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>Python</li>
+              <li>SQL (básico)</li>
+            </ul>
+          </section>
+          <!-- Frameworks / Librerías -->
+          <section class="skill-block">
+            <header class="sec-head">
+              <h3 class="skill-title">Frameworks</h3>
+            </header>
+            <ul class="pill-list">
+              <li>React</li>
+              <li>Next.js</li>
+              <li>Express</li>
+              <li>Socket.IO</li>
+              <li>Flask</li>
+              <li>Bootstrap</li>
+            </ul>
+          </section>
+          <!-- Tecnologías / Herramientas -->
+          <section class="skill-block">
+            <header class="sec-head">
+              <h3 class="skill-title">Tecnologías</h3>
+            </header>
+            <ul class="pill-list">
+              <li>Git</li>
+              <li>GitHub</li>
+              <li>Node.js</li>
+              <li>REST APIs</li>
+              <li>Postman</li>
+              <li>VS Code</li>
+            </ul>
+          </section>
         </div>
       </div>
     </section>
@@ -103,13 +139,7 @@
       <div class="wrap">
         <header class="sec-head">
           <h2>Proyectos</h2>
-          <div class="filters" role="tablist" aria-label="Filtrar proyectos">
-            <button class="chip is-active" role="tab" aria-selected="true" data-filter="all">Todos</button>
-            <button class="chip" role="tab" aria-selected="false" data-filter="tiempo-real">Tiempo real</button>
-            <button class="chip" role="tab" aria-selected="false" data-filter="juegos">JS / Juegos</button>
-            <button class="chip" role="tab" aria-selected="false" data-filter="interfaces">Interfaces</button>
-            <button class="chip" role="tab" aria-selected="false" data-filter="automatizacion">Automatización</button>
-          </div>
+
         </header>
 
         <div class="cards" id="gridProyectos">
