Se cambian las palabras con iconos en la seccion "Habilidades"

--- a/landyng-page/index.html
+++ b/landyng-page/index.html
@@ -40,7 +40,7 @@
         <div class="cta-row">
           <a class="btn btn-primary" href="#proyectos">Ver proyectos</a>
           <a class="btn btn-ghost" href="#">descargar CV <img src="images/perfil-del-usuario.png" alt="icono CV"></a>
-          <a class="btn btn-ghost" href="#">GitHub <img src="images/github.png" alt="Github icon"></a>
+          <a class="btn btn-ghost" href="#">GitHub <img src="https://www.svgrepo.com/show/475654/github-color.svg" alt="GitHub"></a>
           <a class="btn btn-ghost" href="#">linkedin <img src="images/linkedin.png" alt="Icono Linekdin"></a>
         </div>
 
@@ -80,7 +80,8 @@
       </div>
     </section>
 
-      <!--Habilidades-->
+    <!--Habilidades-->
+
     <section id="skills" class="section">
       <div class="wrap">
         <header class="sec-head">
@@ -93,12 +94,13 @@
               <h3 class="skill-title">Lenguajes</h3>
             </header>
             <ul class="pill-list">
-              <li>JavaScript</li>
-              <li>TypeScript</li>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Python</li>
-              <li>SQL (básico)</li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/typescript/typescript-original.svg" alt="TypeScript"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg" alt="C#"></li>
+              <li><img src="https://www.svgrepo.com/show/331760/sql-database-generic.svg" alt="SQL"></li>
             </ul>
           </section>
           <!-- Frameworks / Librerías -->
@@ -107,13 +109,17 @@
               <h3 class="skill-title">Frameworks</h3>
             </header>
             <ul class="pill-list">
-              <li>React</li>
-              <li>Next.js</li>
-              <li>Express</li>
-              <li>Socket.IO</li>
-              <li>Flask</li>
-              <li>Bootstrap</li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" alt="Next.js"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/express/express-original.svg" alt="Express"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/socketio/socketio-original.svg" alt="Socket.IO"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/django/django-plain.svg" alt="Django"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" alt="Angular"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/ionic/ionic-original.svg" alt="Ionic"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/tailwindcss/tailwindcss-original.svg" alt="Tailwind CSS"></li>
             </ul>
+
           </section>
           <!-- Tecnologías / Herramientas -->
           <section class="skill-block">
@@ -121,12 +127,11 @@
               <h3 class="skill-title">Tecnologías</h3>
             </header>
             <ul class="pill-list">
-              <li>Git</li>
-              <li>GitHub</li>
-              <li>Node.js</li>
-              <li>REST APIs</li>
-              <li>Postman</li>
-              <li>VS Code</li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git"></li>
+              <li><img src="https://www.svgrepo.com/show/475654/github-color.svg" alt="GitHub"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="Node.js"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postman/postman-original.svg" alt="Postman"></li>
+              <li><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" alt="VS Code"></li>
             </ul>
           </section>
         </div>
