Se agrega CV en formato pdf para descargar. Queda actualizar proyectos y subir los videos

--- a/landyng-page/index.html
+++ b/landyng-page/index.html
@@ -33,13 +33,16 @@
         <h1 class="display">Airon Sáez</h1>
         <p class="kicker">Desarrollador Web Junior</p>
         <p class="lead">
-          Construyo interfaces claras, humanas y mantenibles. Me gusta el tiempo real con Socket.io,
-          la automatización y los pequeños detalles que elevan la experiencia.
+          Soy desarrollador fullstack en formación, con gran interés en seguir aprendiendo y 
+          mejorar cada día. Busco oportunidades para aplicar mis conocimientos y crecer en el mundo de la programación.
         </p>
+
 
         <div class="cta-row">
           <a class="btn btn-primary" href="#proyectos">Ver proyectos</a>
-          <a class="btn btn-ghost" href="#">descargar CV <img src="images/perfil-del-usuario.png" alt="icono CV"></a>
+          <a class="btn btn-ghost" href="archivos/Airon Sáez (1).pdf" download="Airon-Saez-CV.pdf">
+            Descargar CV <img src="images/perfil-del-usuario.png" alt="icono CV">
+          </a>
           <a class="btn btn-ghost" href="#">GitHub <img src="https://www.svgrepo.com/show/475654/github-color.svg" alt="GitHub"></a>
           <a class="btn btn-ghost" href="#">linkedin <img src="images/linkedin.png" alt="Icono Linekdin"></a>
         </div>
